# Ec_Jpake_POC

./: .gitignore  build.gradle  swig.command
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: swig.i
app/src/main/cpp/ec-jpake/: ec-jpake.c  ec-jpake.h  pointCalc.c  pointCalc.h  sample.h  sha256_.c  sha256_.h  speke_java.c  wrap.c
app/src/main/cpp/micro-ecc/: curve-specific.inc  uECC.c  uECC.h
app/src/main/java/com/dexcomin/ecjpake/: AES.java  MainActivity.java  SWIGTYPE_p_eccPoint.java  SWIGTYPE_p_signed_char.java  SWIGTYPE_p_size_t.java  SWIGTYPE_p_void.java  ecjpake.java  ecjpakeJNI.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
